@@ -4,9 +4,10 @@
 
 - v1.0.1050                                 -
 ---------------------------------------------
-- 2020-11-07                                -
+- 2020-11-08                                -
 ---------------------------------------------
 .: WSM: Task: Create build bot (WSM-216)
+.: WSM: Task: Add Social Media (WSM-52)
 
 ---------------------------------------------
 - 2020-11-06                                -
